[Misc] Migrate tests to JUnit5