@@ -19,12 +19,12 @@
  */
 package org.xwiki.rendering.internal.transformation.macro;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
-import org.junit.Assert;
-import org.junit.Rule;
-import org.junit.Test;
+import javax.inject.Inject;
+
+import org.junit.jupiter.api.Test;
 import org.xwiki.rendering.block.FormatBlock;
 import org.xwiki.rendering.block.GroupBlock;
 import org.xwiki.rendering.block.MacroBlock;
@@ -35,7 +35,10 @@ import org.xwiki.rendering.internal.util.DefaultErrorBlockGenerator;
 import org.xwiki.rendering.listener.Format;
 import org.xwiki.rendering.util.ErrorBlockGenerator;
 import org.xwiki.test.annotation.ComponentList;
-import org.xwiki.test.mockito.MockitoComponentManagerRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Unit tests for {@link MacroErrorManager}.
@@ -43,41 +46,39 @@ import org.xwiki.test.mockito.MockitoComponentManagerRule;
  * @version $Id$
  * @since 4.3M2
  */
+@ComponentTest
 @ComponentList({
     DefaultErrorBlockGenerator.class
 })
-public class MacroErrorManagerTest
+class MacroErrorManagerTest
 {
-    @Rule
-    public MockitoComponentManagerRule componentManager = new MockitoComponentManagerRule();
+    @Inject
+    private ErrorBlockGenerator errorGenerator;
 
     @Test
-    public void containsErrorWhenNoError() throws Exception
+    void containsErrorWhenNoError()
     {
-        MacroErrorManager errorManager =
-            new MacroErrorManager(this.componentManager.getInstance(ErrorBlockGenerator.class));
-        XDOM xdom = new XDOM(Arrays.asList(new ParagraphBlock(Arrays.asList(new WordBlock("test")))));
-        Assert.assertFalse(errorManager.containsError(xdom));
+        MacroErrorManager errorManager = new MacroErrorManager(this.errorGenerator);
+        XDOM xdom = new XDOM(List.of(new ParagraphBlock(List.of(new WordBlock("test")))));
+        assertFalse(errorManager.containsError(xdom));
     }
 
     @Test
-    public void containsErrorWhenNoErrorButGroupAndFormatBlocks() throws Exception
+    void containsErrorWhenNoErrorButGroupAndFormatBlocks()
     {
-        MacroErrorManager errorManager =
-            new MacroErrorManager(this.componentManager.getInstance(ErrorBlockGenerator.class));
-        XDOM xdom = new XDOM(Arrays.asList(new GroupBlock(Arrays.asList(
-            new FormatBlock(Arrays.asList(new WordBlock("test")), Format.BOLD)))));
-        Assert.assertFalse(errorManager.containsError(xdom));
+        MacroErrorManager errorManager = new MacroErrorManager(this.errorGenerator);
+        XDOM xdom = new XDOM(List.of(new GroupBlock(List.of(
+            new FormatBlock(List.of(new WordBlock("test")), Format.BOLD)))));
+        assertFalse(errorManager.containsError(xdom));
     }
 
     @Test
-    public void containsErrorWhenInlineMacroError() throws Exception
+    void containsErrorWhenInlineMacroError()
     {
-        MacroErrorManager errorManager =
-            new MacroErrorManager(this.componentManager.getInstance(ErrorBlockGenerator.class));
+        MacroErrorManager errorManager = new MacroErrorManager(this.errorGenerator);
         MacroBlock macroBlock = new MacroBlock("testmacro", Collections.emptyMap(), true);
-        XDOM xdom = new XDOM(Arrays.asList(macroBlock));
+        XDOM xdom = new XDOM(List.of(macroBlock));
         errorManager.generateError(macroBlock, null, "test message", "test description");
-        Assert.assertTrue(errorManager.containsError(xdom));
+        assertTrue(errorManager.containsError(xdom));
     }
 }
